# playrs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  playrs-2023-07-05-489b4cc9b61e.json.enc
hack/emacs/: go-mode.el  project.el
src/: main.rs
src/duckdb/: command.rs  db.rs  mod.rs
src/embedding/: command.rs  mod.rs  similarity.rs  text.rs
src/gcp/: README.md  command.rs  mod.rs
src/gcp/gcs/: command.rs  mod.rs
src/grpc/: README.md  client.rs  command.rs  grpc.hello.v1.rs  mod.rs  server.rs
src/grpc/client/: mod.rs
src/grpc/proto/: hello.proto
src/grpc/server/: mod.rs
src/rocksdb/: README.md  command.rs  counter.rs  db.rs  db_test.rs  edge.rs  edge_test.rs  error.rs  graph.proto.v1.rs  graph.rs  hash.rs  index.rs  key.rs  kv.rs  mod.rs  node.rs  node_test.rs  rocksdb.graph.v1.rs  rocksdb.record.v1.rs
src/rocksdb/proto/: graph.proto  record.proto  schema.proto
src/rocksdb/server/: mod.rs
src/serde/: command.rs  json.rs  mod.rs  yaml.rs
src/template/: mod.rs
src/watch/: command.rs  mod.rs  server.rs
tests/: embeddings_test.rs
