[package]
name = "playrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
async-std = "1.5.0"
crossbeam-channel = "0.4.0"
notify = "5.0.0-pre.14"

arrow = { version = "5.0", default-features = false, features = ["csv", "ipc"] } # "simd" won't compile
clap  = { version = "3.1.6", features = ["derive", "env"] }

serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0" }

signal-hook = { version = "0.3" }

tempfile = { version = "3" }
tera = { version = "1" }
tracing = { version = "0.1" }
tracing-appender = { version = "0.1" }
tracing-subscriber = { version = "0.3" }

simple-error = { version = "0.2.3" }

# gRPC dependencies
tonic = "0.7"
tonic-reflection = "0.4.0"
tokio = { version = "1.18", features = ["macros", "rt-multi-thread"] }
prost = "0.10"

# RocksDB
rocksdb = "0.18.0"



[build-dependencies]

# For GRPC
tonic-build = "0.7"