[package]
name = "playrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Basics =====
time = { version = "0.3.36" }

# Filesystem notifications ======
futures = { version = "0.3.21" }
async-std = { version = "1.12" }
crossbeam-channel = { version = "0.5.5" }
notify = { version = "6.1.1" }
# ====== Filesystem notifications

# Apache Arrow ===
# Used by Duckdb example also
arrow = { version = "54.0" }
# === Apache Arrow

# CLI ============
clap = { version = "4.1.5", features = ["derive", "env"] }
# ============ CLI

# SERDE ==========
serde = { version = "1.0.137", features = ["derive"] }
# JSON
serde_json = { version = "1.0.81" }
# YAML
serde_yaml = { version = "0.9" }
# ========== SERDE


signal-hook = { version = "0.3.14" }
tempfile = { version = "3" }

# Logging / Tracing ==========
tera = { version = "1.16" }
tracing = { version = "0.1" }
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3" }
# ========== Logging / Tracing

# Error handling
simple-error = { version = "0.3.1" }

# GRPC ========================
# https://www.swiftdiaries.com/rust/tonic/
tonic = { version = "0.12.1", features = ["tls"] }
tonic-reflection = "0.12.1"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
prost = { version = "0.13.1" }
prost-types = { version = "0.13.1" }
chrono = { version = "0.4.41", default-features = false }
tower = "0.4.13"
# ======================== GRPC


# DuckDB =====================
duckdb = { version = "1.0.0", features = ["bundled"] }
# ===================== DuckDB

# RocksDB =====================
# https://docs.rs/rocksdb/0.21.0/rocksdb/
rocksdb = { version = "0.22" }
# ===================== RocksDB

[build-dependencies]

# GRPC
tonic-build = { version = "0.12.1" }
